--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,3 +1,8 @@
+* {
+  padding: 0%;
+  box-sizing: border-box;
+}
+
 body {
   display: flex;
   justify-content: center;
@@ -6,7 +11,8 @@ body {
   margin: 0;
   background: #222;
   font-family: "Open Sans", sans-serif;
-  background-image: url("https://source.unsplash.com/1600x900/?landscape");
+  background-image: url("https://source.unsplash.com/1600x900/?nature");
+  font-size: 120%;
 }
 
 .card {
@@ -15,7 +21,7 @@ body {
   padding: 2em;
   border-radius: 30px;
   width: 100%;
-  max-width: 420px;
+  max-width: 510px;
   margin: 1em;
 }
 
@@ -29,8 +35,8 @@ button {
   margin: 0.5em;
   border-radius: 50%;
   border: none;
-  height: 46px;
-  width: 46px;
+  height: 44px;
+  width: 44px;
   outline: none;
   background: #7c7c7c2b;
   color: white;
@@ -41,14 +47,19 @@ button {
 input.search-bar {
   border: none;
   outline: none;
-  padding: 0.5em 1em;
+  padding: 0.4em 1em;
   border-radius: 24px;
   background-color: #7c7c7c2b;
   color: white;
   font-family: inherit;
-  font-size: 120%;
+  font-size: 105%;
+  width: calc(100% - 100px);
 }
 
 button:hover {
   background: #7c7c7c;
+}
+
+h1.temp {
+  margin: 0;
 }
